[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicogmap"
version = "0.1.0"
description = "AI Cognitive Mapping Tool — Real-time transformer layer activation visualization for SGLang"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "openhelper"},
]
keywords = ["ai", "llm", "visualization", "sglang", "transformer", "activations", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
hook = ["torch"]

[project.urls]
Homepage = "https://github.com/openhelper/ai-cog-map"
Repository = "https://github.com/openhelper/ai-cog-map"

[project.scripts]
aicogmap = "aicogmap.server:main"

[tool.setuptools.packages.find]
include = ["aicogmap*"]
