[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicogmap"
version = "0.2.0"
description = "AI Cognitive Mapping Tool — Real-time transformer layer activation visualization for SGLang"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Sonny Vleisides", email = "sonny@arranetworks.com"},
]
keywords = ["ai", "llm", "visualization", "sglang", "transformer", "activations", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
hook = ["torch"]

[project.urls]
Homepage = "https://github.com/openhelper/ai-cog-map"
Repository = "https://github.com/openhelper/ai-cog-map"
Changelog = "https://github.com/openhelper/ai-cog-map/blob/main/CHANGELOG.md"

[project.scripts]
aicogmap = "aicogmap.server:main"

[tool.setuptools.packages.find]
include = ["aicogmap*"]

[tool.setuptools.package-data]
aicogmap = ["static/**"]
